forse ho finito

--- a/signUpIn.html
+++ b/signUpIn.html
@@ -14,7 +14,8 @@
     <!-- Navbar -->
         <header class="header">
           <div class="header__content">
-            <a class="header__logo" href="#"> <strong>LOGO</strong> </a>
+            <a class="header__logo" href="#"><img src="MEDIA/company-slogan-removebg-preview.png" width="80px" alt=""> </a>
+            <!-- <a class="header__logo" href="#"> <strong>LOGO</strong> </a> -->
             <ul class="header__menu">
               <li><a href="#chisiamo" class="header__link">Chi siamo</a></li>
               <li><a href="#team" class="header__link">Il nostro team</a></li>
