--- a/signUpIn.html
+++ b/signUpIn.html
@@ -58,7 +58,35 @@
                     </div>
             </div>
         </div>
+        <!-- <div class="spacer2"></div> -->
 
+        <footer>
+          <span class="mt-2">Company | C.F. ABC000000000 | P.Iva 000000000 </span>
+          <br>
+          <span> <i class="fa-solid fa-location-dot"></i> &nbsp Via lorem, 123 - 12345 Città (Provincia) PAESE </span> 
+          <br>
+          <br>
+          <a href="#"> nomeazienda@dominio.it</a> <!-- href="mailto:indirizzo@email.com" -->
+          <br> 
+          <span itemprop="telephone"><a href="#">+39 123 45 67 890</a></span>
+          <div class="spacer2"></div>
+          <a target="_blank" href="#"> privacy</a> | <a target="_blank" href="#"> cookie policy</a>
+          <div class="social__cont">        
+          <ul class="social__list">
+            <li><a target="_blank" href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+            <li><a target="_blank" href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a target="_blank" href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li><a target="_blank" href="#"><i class="fa-brands fa-google-plus-g"></i></a></li>
+          </ul>
+          <div class="floatstop"></div>
+          </div><!--/fine social cont-->
+         <div class="credits">
+         <a target="_blank" href="#"><img width="150px" src="MEDIA/company-icon-removebg-full.png" title="" alt=""></a>  
+          </div>
+          <br>
+          <span id="hi">Designed by <a target="_blank" href="https://www.linkedin.com/in/valeria-parise-7a90/">Valeria Parise</a></span>
+        </footer>
+        
 
         <!-- Js per Menu -->
 <script> 
