--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <!-- Team -->
   <div class="grid grid--center" id="team">
-    <div class="col-70 text-center pt-4 pb-3 mt-0">
+    <div class="col-70 text-center pt-3 pb-3 mt-0">
       <h2>Il nostro team</h2>
       <p>Presentazione del team</p>
     </div>
@@ -95,7 +95,7 @@
       <a href="" class="button button__black">Scopri di più</a>
     </div>
     <div class="col-50 p-3 relative">
-      <img src="MEDIA/progetti.jpg" class="img-res img-round" id="img__project" alt="">
+      <img src="MEDIA/progetti.jpg" class="img-res img-round" alt="">
     </div>
   </div>
 
@@ -107,10 +107,10 @@
       <a href="" class="button button__white mt-2">Call to action banner</a>
     </div>
   </div>
-
+<div class="spacer"></div>
   <!-- Job Position -->
   <div class="grid grid--center text-center" id="lavoraconnoi">
-    <div class="col-70 text-center mt-4 pt-4 pb-3">
+    <div class="col-70 text-center mt-3 pt-3 pb-3">
       <h2>Lavora con noi</h2>
       <p>Le nostre offerte di lavoro.</p>
     </div>
@@ -130,9 +130,9 @@
       <a href=""  target="_blank" rel="noreferrer noopener" class="job-position__link">Candidati <i class="fa-solid fa-chevron-right"></i></a>
     </div>
   </div>
-
+<div class="spacer"></div>
  <!-- Contact -->
- <div class="grid mediatext mt-2" id="contatti">
+ <div class="grid mediaform  " id="contatti">
   <div class="col-50 p-3 sma-text-center contatti__cont">
     <h2 class="text-1">Contatti</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure totam iusto quis numquam voluptatibus sed saepe animi eaque at possimus! Soluta velit vel cupiditate sint sed voluptas rerum ea ab!     
@@ -162,8 +162,6 @@
   </div>
 </div>
 <div class="spacer"></div>
-
-
 
  <!-- FOOTER -->
  <footer>
