--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
       <img src="MEDIA/cover.jpg" class="img-res img-round" alt="">
     </div>
   </div>
-
 <!-- Team -->
+ <div class="spacer"></div>
   <div class="grid grid--center" id="team">
-    <div class="col-70 text-center pt-3 pb-3 mt-0">
+    <div class="col-70 text-center pt-4 pb-3 mt-2">
       <h2>Il nostro team</h2>
       <p>Presentazione del team</p>
     </div>
@@ -110,7 +110,7 @@
 <div class="spacer"></div>
   <!-- Job Position -->
   <div class="grid grid--center text-center" id="lavoraconnoi">
-    <div class="col-70 text-center mt-3 pt-3 pb-3">
+    <div class="col-70 text-center mt-3 pt-4 pb-3">
       <h2>Lavora con noi</h2>
       <p>Le nostre offerte di lavoro.</p>
     </div>
