--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
       Est eligendi ad sit architecto quisquam sapiente sint corrupti asperiores iste. Ad explicabo aut voluptate maiores et fugit, reprehenderit sint porro inventore incidunt commodi est laborum, molestias asperiores ab illo.</p>
       <a href="" class="button button__black">Scopri di più</a>
     </div>
-    <div class="col-50 p-3 relative">
-      <img src="MEDIA/progetti.jpg" class="img-res img-round" alt="">
+    <div class="col-50 p-3 relative img__project">
+      <img src="MEDIA/progetti.jpg" class="img-res img-round " id="img__project" alt="">
     </div>
   </div>
 
