--- a/index.html
+++ b/index.html
@@ -130,9 +130,10 @@
       <a href=""  target="_blank" rel="noreferrer noopener" class="job-position__link">Candidati <i class="fa-solid fa-chevron-right"></i></a>
     </div>
   </div>
+
 <div class="spacer"></div>
  <!-- Contact -->
- <div class="grid mediaform  " id="contatti">
+ <div class="grid mediaform pt-4 mt-3" id="contatti">
   <div class="col-50 p-3 sma-text-center contatti__cont">
     <h2 class="text-1">Contatti</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure totam iusto quis numquam voluptatibus sed saepe animi eaque at possimus! Soluta velit vel cupiditate sint sed voluptas rerum ea ab!     
@@ -161,8 +162,6 @@
     </form>
   </div>
 </div>
-<div class="spacer"></div>
-
  <!-- FOOTER -->
  <footer>
   <span class="mt-2">Company | C.F. ABC000000000 | P.Iva 000000000 </span>
