fix mediaquery login

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
   </div>
 
   <!-- Project -->
-  <div class="grid mediatext " id="progetti">
+  <div class="grid mediatext mt-2 mb-2" id="progetti">
     <div class="col-50 p-3 sma-text-center mediatext__bg">
       <h2 class="text-1">Titolo mediatext</h2>
       <h3>Sottotitolo</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolorum laudantium magni inventore optio modi praesentium, provident omnis nostrum dolore sequi, tempore atque voluptatem repudiandae quidem doloribus tenetur. A, aspernatur.
       Obcaecati, maxime dolor porro delectus exercitationem aspernatur officiis, voluptate nostrum temporibus quae sit quaerat hic quam ducimus atque, velit saepe molestiae neque! Magni, odit. In similique commodi praesentium accusamus reprehenderit!
-      Est eligendi ad sit architecto quisquam sapiente sint corrupti asperiores iste. Ad explicabo aut voluptate maiores et fugit, reprehenderit sint porro inventore incidunt commodi est laborum, molestias asperiores ab illo.</p>
+      </p>
       <a href="" class="button button__black">Scopri di più</a>
     </div>
     <div class="col-50 p-3 relative img__project">
