--- a/signUpIn.html
+++ b/signUpIn.html
@@ -39,21 +39,21 @@
                 <input type="checkbox" id="chk" aria-hidden="true">
                     <div class="signup">
                         <form class="signup__form">
-                            <label for="chk" aria-hidden="true" id="signup__label">Sign up</label>
+                            <label for="chk" aria-hidden="true" id="signup__label">Registrati</label>
                             <input type="text" name="sign__txt" placeholder="Nome" required="">
                             <input type="email" name="signup__email" placeholder="Email" required="">
                             <input type="number" name="signup__telefono" placeholder="Telefono" required="">
                             <input type="password" name="signup__pswd" placeholder="Password" required="">
                             <input type="password" name="signup__pswd" placeholder="Ripeti password" required="">
-                            <button id="signup__button">Sign up</button>
+                            <button id="signup__button">Registrati</button>
                         </form>
                     </div>
                     <div class="login">
                         <form class="signin__form">
-                            <label for="chk" aria-hidden="true" id="signin__label">Sign in</label>
+                            <label for="chk" aria-hidden="true" id="signin__label">Accedi</label>
                             <input type="email" name="signin__email" placeholder="Email" required="">
                             <input type="password" name="signin__pswd" placeholder="Password" required="">
-                            <button id="signin__button">Sign in</button>
+                            <button id="signin__button">Accedi</button>
                         </form>
                     </div>
             </div>
