--- a/signUpIn.html
+++ b/signUpIn.html
@@ -17,14 +17,14 @@
             <a class="header__logo" href="#"><img src="MEDIA/company-slogan-removebg-preview.png" width="80px" alt=""> </a>
             <!-- <a class="header__logo" href="#"> <strong>LOGO</strong> </a> -->
             <ul class="header__menu">
-              <li><a href="#chisiamo" class="header__link">Chi siamo</a></li>
-              <li><a href="#team" class="header__link">Il nostro team</a></li>
-              <li><a href="#progetti" class="header__link">Progetti</a></li>
-              <li><a href="#lavoraconnoi" class="header__link">Lavora con noi</a></li>
-              <li><a href="login.html"target="_blank" rel="noreferrer noopener" class="header__link active">Accedi</a></li>
+              <li><a href="index.html#chisiamo" class="header__link">Chi siamo</a></li>
+              <li><a href="index.html#team" class="header__link">Il nostro team</a></li>
+              <li><a href="index.html#progetti" class="header__link">Progetti</a></li>
+              <li><a href="index.html#lavoraconnoi" class="header__link">Lavora con noi</a></li>
+              <li><a href="#"target="_blank" rel="noreferrer noopener" class="header__link active">Accedi</a></li>
             </ul>
             <div class="header__quick">
-              <a class="button-small" href="#contatti">Contatti</a>
+              <a class="button-small" href="index.html#contatti">Contatti</a>
                 <div class="icon-hamburger menu-overlay">
                   <span></span>
                   <span></span>
