--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
   </div>
 <!-- Cover -->
-  <div class="grid cover" id="chisiamo">
+  <div class="grid cover pt-4 " id="chisiamo">
     <div class="col-50 pt-3 sma-text-center">
       <h1 id="cover__h1">Azienda</h1>
       <h2 class="font-normal"></h2>
@@ -85,7 +85,7 @@
   </div>
 
   <!-- Project -->
-  <div class="grid mediatext mt-2 mb-2" id="progetti">
+  <div class="grid mediatext mt-3 mb-3 pb-2" id="progetti">
     <div class="col-50 p-3 sma-text-center mediatext__bg">
       <h2 class="text-1">Titolo mediatext</h2>
       <h3>Sottotitolo</h3>
