--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <li><a href="#team" class="header__link">Il nostro team</a></li>
         <li><a href="#progetti" class="header__link">Progetti</a></li>
         <li><a href="#lavoraconnoi" class="header__link">Lavora con noi</a></li>
-        <li><a href="signUpIn.html"target="_blank" rel="noreferrer noopener" class="header__link">Accedi</a></li>
+        <li><a href="login.html"target="_blank" rel="noreferrer noopener" class="header__link">Accedi</a></li>
+        <!-- LOGIN CHE SPACCA -->
+        <!-- <li><a href="signUpIn.html"target="_blank" rel="noreferrer noopener" class="header__link">Accedi</a></li> -->
       </ul>
       <div class="header__quick">
         <a class="button-small" href="#contatti">Contatti</a>
@@ -46,8 +48,8 @@
     </div>
   </div>
 <!-- Cover -->
-  <div class="grid cover pt-4 " id="chisiamo">
-    <div class="col-50 pt-3 sma-text-center">
+  <div class="grid cover pt-4 pb-2" id="chisiamo">
+    <div class="col-50  sma-text-center">
       <h1 id="cover__h1">Azienda</h1>
       <h2 class="font-normal"></h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis maxime, quod ratione, sed magnam necessitatibus cupiditate consequatur esse cum, labore dicta minus maiores quas veniam tenetur fugiat. Quos, corporis. Voluptas?</p>
@@ -83,10 +85,10 @@
       </div>
     </div>
   </div>
-
+<div class="spacer"></div>
   <!-- Project -->
-  <div class="grid mediatext mt-3 mb-3 pb-2" id="progetti">
-    <div class="col-50 p-3 sma-text-center mediatext__bg">
+  <div class="grid cover pt-4 pb-2 " id="progetti">
+    <div class="col-50 sma-text-center ">
       <h2 class="text-1">Titolo mediatext</h2>
       <h3>Sottotitolo</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolorum laudantium magni inventore optio modi praesentium, provident omnis nostrum dolore sequi, tempore atque voluptatem repudiandae quidem doloribus tenetur. A, aspernatur.
@@ -98,9 +100,11 @@
       <img src="MEDIA/progetti.jpg" class="img-res img-round " id="img__project" alt="">
     </div>
   </div>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
 
   <!-- Banner -->
-  <div class="banner banner__background" >
+  <div class="banner pt-2 pb-2 banner__background" >
     <div class="banner__content">
       <h1> Titolo banner </h1>
       <h2 class="font-normal"> sottotitolo banner </h2>
