--- a/chisiamo.html
+++ b/chisiamo.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,10 +18,10 @@
     <div class="header__content">
       <a class="header__logo" href="#"><img src="MEDIA/company-slogan-removebg-preview.png" width="80px" alt=""> </a>
       <ul class="header__menu">
-        <li><a href="#" class="header__link active">Home</a></li>
-        <li><a href="chisiamo.html" class="header__link">Chi siamo</a></li>
+        <li><a href="#" class="header__link">Home</a></li>
+        <li><a href="chisiamo.html" class="header__link active">Chi siamo</a></li>
         <li><a href="lavoraconnoi.html" class="header__link">Lavora con noi</a></li>
-        <li><a href="#contatti"target="_blank" rel="noreferrer noopener" class="header__link">Contatti</a></li>
+        <li><a href="index.html/#contatti"target="_blank" rel="noreferrer noopener" class="header__link">Contatti</a></li>
         <!-- LOGIN CHE SPACCA -->
         <!-- <li><a href="signUpIn.html"target="_blank" rel="noreferrer noopener" class="header__link">Accedi</a></li> -->
       </ul>
