--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="style-signUpIn.css"> -->
      <link rel="stylesheet" href="login-style.css">
@@ -18,6 +19,7 @@
             <a class="header__logo" href="#"><img src="MEDIA/company-slogan-removebg-preview.png" width="80px" alt=""> </a>
             <!-- <a class="header__logo" href="#"> <strong>LOGO</strong> </a> -->
             <ul class="header__menu">
+              
               <li><a href="index.html#chisiamo" class="header__link">Chi siamo</a></li>
               <li><a href="index.html#team" class="header__link">Il nostro team</a></li>
               <li><a href="index.html#progetti" class="header__link">Progetti</a></li>
@@ -34,58 +36,45 @@
           </div>
         </header>
 
-    <!-- Sign up -->
     
-    <div class="limiter">
-		<div class="container-login100">
-			<div class="wrap-login100">
-				<form class="login100-form validate-form">
-					<span class="login100-form-title p-b-26">
-						Welcome
-					</span>
-					<span class="login100-form-title p-b-48">
-						<i class="zmdi zmdi-font"></i>
-					</span>
+<!-- Sign up form -->
+<section class="signup">
+    <div class="container">
+        <div class="signup-content">
+            <div class="signup-form">
+                <h2 class="form-title">Registrati</h2>
+                <form method="POST" class="register-form" id="register-form">
+                    <div class="form-group">
+                        <label for="name"><i class="fa-solid fa-user"></i></label>
+                        <input type="text" name="name" id="name" placeholder="Nome"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="email"><i class="fa-solid fa-at"></i></label>
+                        <input type="email" name="email" id="email" placeholder="Email"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="pass"><i class="fa-solid fa-lock"></i></label>
+                        <input type="password" name="pass" id="pass" placeholder="Password"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="re-pass"><i class="fa-solid fa-lock-open"></i></label>
+                        <input type="password" name="re_pass" id="re_pass" placeholder="Ripeti password"/>
+                    </div>
+                    <div class="form-group">
+                        <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
+                        <label for="agree-term" class="label-agree-term"><span><span></span></span>Accetto le  <a href="#" class="term-service">Condizioni di servizio</a></label>
+                    </div>
+                    <div class="form-group form-button">
+                        <input type="submit" name="signup" id="signup" class="form-submit" value="Registrati"/>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
 
-					<div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
-						<input class="input100" type="text" name="email">
-						<span class="focus-input100" data-placeholder="Email"></span>
-					</div>
 
-					<div class="wrap-input100 validate-input" data-validate="Enter password">
-						<span class="btn-show-pass">
-							<i class="zmdi zmdi-eye"></i>
-						</span>
-						<input class="input100" type="password" name="pass">
-						<span class="focus-input100" data-placeholder="Password"></span>
-					</div>
-
-					<div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<button class="login100-form-btn">
-								Login
-							</button>
-						</div>
-					</div>
-
-					<div class="text-center p-t-115">
-						<span class="txt1">
-							Don’t have an account?
-						</span>
-
-						<a class="txt2" href="#">
-							Sign Up
-						</a>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-	
-
-    <!-- Footer -->
-
+<!-- Footoer -->
     <footer>
           <span class="mt-2">Company | C.F. ABC000000000 | P.Iva 000000000 </span>
           <br>
