--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
         <li><a href="chisiamo.html" class="header__link">Chi siamo</a></li>
         <li><a href="lavoraconnoi.html" class="header__link">Lavora con noi</a></li>
         <li><a href="#contatti"target="_blank" rel="noreferrer noopener" class="header__link">Contatti</a></li>
-        <!-- LOGIN CHE SPACCA -->
-        <!-- <li><a href="signUpIn.html"target="_blank" rel="noreferrer noopener" class="header__link">Accedi</a></li> -->
+       
       </ul>
       <div class="header__quick">
         <a class="button-small" href="login.html">Accedi</a>
+         <!-- LOGIN CHE SPACCA -->
+        <!-- <a href="signUpIn.html"target="_blank" rel="noreferrer noopener" class="header__link">Accedi</a> -->
           <div class="icon-hamburger menu-overlay">
             <span></span>
             <span></span>
