--- a/chisiamo.html
+++ b/chisiamo.html
@@ -16,10 +16,10 @@
   <!-- Navbar -->
   <header class="header">
     <div class="header__content">
-      <a class="header__logo" href="#"><img src="MEDIA/company-slogan-removebg-preview.png" width="80px" alt=""> </a>
+      <a class="header__logo" href="index.html"><img src="MEDIA/company-slogan-removebg-preview.png" width="80px" alt=""> </a>
       <ul class="header__menu">
-        <li><a href="#" class="header__link">Home</a></li>
-        <li><a href="chisiamo.html" class="header__link active">Chi siamo</a></li>
+        <li><a href="index.html" class="header__link">Home</a></li>
+        <li><a href="#" class="header__link active">Chi siamo</a></li>
         <li><a href="lavoraconnoi.html" class="header__link">Lavora con noi</a></li>
         <li><a href="index.html/#contatti"target="_blank" rel="noreferrer noopener" class="header__link">Contatti</a></li>
         <!-- LOGIN CHE SPACCA -->
@@ -37,28 +37,11 @@
 
 
 <!-- Hero -->
-  <div class="hero hero__background" >
-    <div class="hero__content">
-      <h1> Titolo titolo titolo </h1>
-      <h2 class="font-normal"> sottotitolo </h2>
-      <a href="" class="button button__white mt-2">Call to action</a>
-    </div>
-  </div>
-<!-- Cover -->
-  <div class="grid cover pt-4 pb-2" id="chisiamo">
-    <div class="col-50  sma-text-center">
-      <h1 id="cover__h1">Azienda</h1>
-      <h2 class="font-normal"></h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis maxime, quod ratione, sed magnam necessitatibus cupiditate consequatur esse cum, labore dicta minus maiores quas veniam tenetur fugiat. Quos, corporis. Voluptas?</p>
-      <a href="" class="button button__black">Call to action</a>
-    </div>
-    <div class="col-50 p-3 relative">
-      <img src="MEDIA/cover.jpg" class="img-res img-round" alt="">
-    </div>
+  <div class="hero hero__background" id="hero__chisiamo">
+    <span></span>
   </div>
 <!-- Team -->
- <div class="spacer"></div>
-  <div class="grid grid--center" id="team">
+  <div class="grid grid--center pb-4" id="team">
     <div class="col-70 text-center pt-4 pb-3 mt-2">
       <h2>Il nostro team</h2>
       <p>Presentazione del team</p>
@@ -80,89 +63,28 @@
         <h3> Partner 3 </h3>
         <p> lorem </p>
       </div>
+      <div class="spacer"></div>
     </div>
+    <div class="col-33">
+        <div class="cover__partner round mb-2"  id="ct__1" >
+          <h3> Partner 1 </h3>
+          <p> lorem </p>
+        </div>
+      </div>
+      <div class="col-33">
+        <div class="cover__partner round mb-2" id="ct__2">
+          <h3> Partner 2 </h3>
+          <p> lorem </p>
+        </div>
+      </div>
+      <div class="col-33">
+        <div class="cover__partner round mb-2" id="ct__3">
+          <h3> Partner 3 </h3>
+          <p> lorem </p>
+        </div>
+      </div>
   </div>
-<div class="spacer"></div>
-  <!-- Project -->
-  <div class="grid cover pt-4 pb-2 " id="progetti">
-    <div class="col-50 sma-text-center ">
-      <h2 class="text-1">Titolo mediatext</h2>
-      <h3>Sottotitolo</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolorum laudantium magni inventore optio modi praesentium, provident omnis nostrum dolore sequi, tempore atque voluptatem repudiandae quidem doloribus tenetur. A, aspernatur.
-      Obcaecati, maxime dolor porro delectus exercitationem aspernatur officiis, voluptate nostrum temporibus quae sit quaerat hic quam ducimus atque, velit saepe molestiae neque! Magni, odit. In similique commodi praesentium accusamus reprehenderit!
-      </p>
-      <a href="" class="button button__black">Scopri di più</a>
-    </div>
-    <div class="col-50 p-3 relative img__project">
-      <img src="MEDIA/progetti.jpg" class="img-res img-round " id="img__project" alt="">
-    </div>
-  </div>
-  <div class="spacer"></div>
-  <div class="spacer"></div>
-
-  <!-- Banner -->
-  <div class="banner pt-2 pb-2 banner__background" >
-    <div class="banner__content">
-      <h1> Titolo banner </h1>
-      <h2 class="font-normal"> sottotitolo banner </h2>
-      <a href="" class="button button__white mt-2">Call to action banner</a>
-    </div>
-  </div>
-<div class="spacer"></div>
-  <!-- Job Position -->
-  <div class="grid grid--center text-center" id="lavoraconnoi">
-    <div class="col-70 text-center mt-3 pt-4 pb-3">
-      <h2>Lavora con noi</h2>
-      <p>Le nostre offerte di lavoro.</p>
-    </div>
-    <div class="col-33 mb-3">
-      <img class="img-res img-small round" src="MEDIA/job1.jpg" alt="">
-      <h4> Posizione 1</h4>
-      <a href="" target="_blank" rel="noreferrer noopener" class="job-position__link">Candidati <i class="fa-solid fa-chevron-right"></i></a>
-    </div>
-    <div class="col-33 mb-3">
-      <img class="img-res img-small round" src="MEDIA/job2.jpg" alt="">
-      <h4>Posizione 2</h4>
-      <a href=""  target="_blank" rel="noreferrer noopener" class="job-position__link">Candidati <i class="fa-solid fa-chevron-right"></i></a>
-    </div>
-    <div class="col-33 mb-3">
-      <img class="img-res img-small round" src="MEDIA/job3.jpg" alt="">
-      <h4>Posizione 3</h4>
-      <a href=""  target="_blank" rel="noreferrer noopener" class="job-position__link">Candidati <i class="fa-solid fa-chevron-right"></i></a>
-    </div>
-  </div>
-
-<div class="spacer"></div>
- <!-- Contact -->
- <div class="grid mediaform pt-4 mt-3" id="contatti">
-  <div class="col-50 p-3 sma-text-center contatti__cont">
-    <h2 class="text-1">Contatti</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure totam iusto quis numquam voluptatibus sed saepe animi eaque at possimus! Soluta velit vel cupiditate sint sed voluptas rerum ea ab!     
-    </p>
-  </div>
-  <!-- Form -->
-  <div class="col-50 p-3 relative modulo mb-4">
-    <form action="" method="post">
-      <ul>
-        <li class="f__input">
-          <label for=nome>Nome</label>
-          <input type="text" name="nome" class="input__text" required>
-        </li>
-        <li class="f__input">
-          <label for="email">Email</label>
-          <input type="text" name="email" class="input__text"  required>
-        </li>
-        <li class="f__input">
-          <label for="testo">Messaggio</label>
-          <textarea name="testo" class="input__text" id="f__testo"></textarea>
-        </li>
-        <li class="f__btn mt-2 mb-2 ">
-          <input type="submit" value="Richiedi informazioni" class="btn__info button-small">
-        </li>
-      </ul>
-    </form>
-  </div>
-</div>
+  
  <!-- FOOTER -->
  <footer>
   <span class="mt-2">Company | C.F. ABC000000000 | P.Iva 000000000 </span>
