--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <li><a href="chisiamo.html" class="header__link">Chi siamo</a></li>
         <li><a href="lavoraconnoi.html" class="header__link">Lavora con noi</a></li>
         <li><a href="#contatti"target="_blank" rel="noreferrer noopener" class="header__link">Contatti</a></li>
-       
       </ul>
       <div class="header__quick">
         <a class="button-small" href="login.html">Accedi</a>
@@ -39,7 +38,7 @@
 
 
 <!-- Hero -->
-  <div class="hero hero__background" >
+  <div class="hero hero__background" id="hero__home" >
     <div class="hero__content">
       <h1> Titolo titolo titolo </h1>
       <h2 class="font-normal"> sottotitolo </h2>
@@ -58,35 +57,12 @@
       <img src="MEDIA/cover.jpg" class="img-res img-round" alt="">
     </div>
   </div>
-<!-- Team -->
- <div class="spacer"></div>
-  <div class="grid grid--center" id="team">
-    <div class="col-70 text-center pt-4 pb-3 mt-2">
-      <h2>Il nostro team</h2>
-      <p>Presentazione del team</p>
-    </div>
-    <div class="col-33">
-      <div class="cover__partner round mb-2"  id="ct__1" >
-        <h3> Partner 1 </h3>
-        <p> lorem </p>
-      </div>
-    </div>
-    <div class="col-33">
-      <div class="cover__partner round mb-2" id="ct__2">
-        <h3> Partner 2 </h3>
-        <p> lorem </p>
-      </div>
-    </div>
-    <div class="col-33">
-      <div class="cover__partner round mb-2" id="ct__3">
-        <h3> Partner 3 </h3>
-        <p> lorem </p>
-      </div>
-    </div>
-  </div>
-<div class="spacer"></div>
+
   <!-- Project -->
-  <div class="grid cover pt-4 pb-2 " id="progetti">
+  <div class="grid cover pt- pb-2 " id="progetti">
+    <div class="col-50 p-3 relative img__project">
+      <img src="MEDIA/progetti.jpg" class="img-res img-round " id="img__project" alt="">
+    </div>
     <div class="col-50 sma-text-center ">
       <h2 class="text-1">Titolo mediatext</h2>
       <h3>Sottotitolo</h3>
@@ -95,13 +71,18 @@
       </p>
       <a href="" class="button button__black">Scopri di più</a>
     </div>
-    <div class="col-50 p-3 relative img__project">
-      <img src="MEDIA/progetti.jpg" class="img-res img-round " id="img__project" alt="">
+  </div>
+  <div class="grid cover pt-2 pb-2" id="chisiamo">
+    <div class="col-50  sma-text-center">
+      <h2 class="text-1">Titolo mediatext</h2>
+      <h2 class="font-normal"></h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis maxime, quod ratione, sed magnam necessitatibus cupiditate consequatur esse cum, labore dicta minus maiores quas veniam tenetur fugiat. Quos, corporis. Voluptas?</p>
+      <a href="" class="button button__black">Call to action</a>
+    </div>
+    <div class="col-50 p-3 relative">
+      <img src="MEDIA/cover.jpg" class="img-res img-round" alt="">
     </div>
   </div>
-  <div class="spacer"></div>
-  <div class="spacer"></div>
-
   <!-- Banner -->
   <div class="banner pt-2 pb-2 banner__background" >
     <div class="banner__content">
@@ -111,32 +92,8 @@
     </div>
   </div>
 <div class="spacer"></div>
-  <!-- Job Position -->
-  <div class="grid grid--center text-center" id="lavoraconnoi">
-    <div class="col-70 text-center mt-3 pt-4 pb-3">
-      <h2>Lavora con noi</h2>
-      <p>Le nostre offerte di lavoro.</p>
-    </div>
-    <div class="col-33 mb-3">
-      <img class="img-res img-small round" src="MEDIA/job1.jpg" alt="">
-      <h4> Posizione 1</h4>
-      <a href="" target="_blank" rel="noreferrer noopener" class="job-position__link">Candidati <i class="fa-solid fa-chevron-right"></i></a>
-    </div>
-    <div class="col-33 mb-3">
-      <img class="img-res img-small round" src="MEDIA/job2.jpg" alt="">
-      <h4>Posizione 2</h4>
-      <a href=""  target="_blank" rel="noreferrer noopener" class="job-position__link">Candidati <i class="fa-solid fa-chevron-right"></i></a>
-    </div>
-    <div class="col-33 mb-3">
-      <img class="img-res img-small round" src="MEDIA/job3.jpg" alt="">
-      <h4>Posizione 3</h4>
-      <a href=""  target="_blank" rel="noreferrer noopener" class="job-position__link">Candidati <i class="fa-solid fa-chevron-right"></i></a>
-    </div>
-  </div>
-
-<div class="spacer"></div>
  <!-- Contact -->
- <div class="grid mediaform pt-4 mt-3" id="contatti">
+ <div class="grid mediaform pt-2 mt-3" id="contatti">
   <div class="col-50 p-3 sma-text-center contatti__cont">
     <h2 class="text-1">Contatti</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure totam iusto quis numquam voluptatibus sed saepe animi eaque at possimus! Soluta velit vel cupiditate sint sed voluptas rerum ea ab!     
@@ -220,3 +177,4 @@
 
 </body>
 </html>
+
