--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="hero__content">
         <h1> Titolo titolo titolo </h1>
         <h2 class="font-normal"> sottotitolo </h2>
-        <a href="" class="button button__white mt-2">Call to action</a>
+        <a href="chisiamo.html" class="button button__white mt-2">Call to action</a>
       </div>
     </div>
     <!-- Cover -->
@@ -114,7 +114,7 @@
           <ul>
             <li class="f__input">
               <label for=nome>Nome</label>
-              <input type="text" name="nome" class="input__text" required autofocus>
+              <input type="text" name="nome" class="input__text" required>
             </li>
             <li class="f__input">
               <label for="email">Email</label>
