--- a/lavoraconnoi.html
+++ b/lavoraconnoi.html
@@ -16,11 +16,11 @@
   <!-- Navbar -->
   <header class="header">
     <div class="header__content">
-      <a class="header__logo" href="#"><img src="MEDIA/company-slogan-removebg-preview.png" width="80px" alt=""> </a>
+      <a class="header__logo" href="index.html"><img src="MEDIA/company-slogan-removebg-preview.png" width="80px" alt=""> </a>
       <ul class="header__menu">
-        <li><a href="#" class="header__link">Home</a></li>
+        <li><a href="index.html" class="header__link">Home</a></li>
         <li><a href="chisiamo.html" class="header__link ">Chi siamo</a></li>
-        <li><a href="lavoraconnoi.html" class="header__link active">Lavora con noi</a></li>
+        <li><a href="#" class="header__link active">Lavora con noi</a></li>
         <li><a href="index.html#contatti"target="_blank" rel="noreferrer noopener" class="header__link">Contatti</a></li>
       </ul>
       <div class="header__quick">
@@ -42,7 +42,7 @@
   <!-- Project -->
   <div class="grid cover pt-4 pb-2 " id="progetti">
     <div class="col-50 sma-text-center ">
-      <h2 class="text-1">Titolo mediatext</h2>
+      <h2 class="text-1">Lavora con noi!</h2>
       <h3>Sottotitolo</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolorum laudantium magni inventore optio modi praesentium, provident omnis nostrum dolore sequi, tempore atque voluptatem repudiandae quidem doloribus tenetur. A, aspernatur.
       Obcaecati, maxime dolor porro delectus exercitationem aspernatur officiis, voluptate nostrum temporibus quae sit quaerat hic quam ducimus atque, velit saepe molestiae neque! Magni, odit. In similique commodi praesentium accusamus reprehenderit!
